Rewrite net/index.md (509->700+ lines) - was rated "Poor"
Complete rewrite:
- Updated to JDK 26 (was stuck at JDK 21)
- Added HTTP/3 (JEP 517), Unix Domain Sockets (JEP 380)
- Added Socket reimplementation (JEP 353/373)
- Removed "Scanner" from networking features
- Added contributor data
- Added JEP table for all networking JEPs

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>